force-app/main/default/objects/Account/fields/Project_Memberships__c.field-meta.xml
<CustomField>
    <fullName>Project_Memberships__c</fullName>
    <label>Project Memberships</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>a0941000002wBz2</fullName>
                <label>Automotive Grade Linux</label>
            </value>
            <value>
                <fullName>a092M00001G4R7x</fullName>
                <label>Chips Alliance Fund</label>
            </value>
            <value>
                <fullName>a0941000002wBz3</fullName>
                <label>Civil Infrastructure Platform</label>
            </value>
            <value>
                <fullName>a0941000011ABSNAA4</fullName>
                <label>Clearwater Pass</label>
            </value>
            <value>
                <fullName>a0941000002wBz5AAE</fullName>
                <label>Cloud Foundry Foundation, Inc. - Archived</label>
            </value>
            <value>
                <fullName>a0941000002wBz4AAE</fullName>
                <label>Cloud Native Computing Foundation (CNCF)</label>
            </value>
            <value>
                <fullName>a0941000002wBz6AAE</fullName>
                <label>Code Aurora Forum (CAF)</label>
            </value>
            <value>
                <fullName>a092M00001G3xhxQAB</fullName>
                <label>Continuous Delivery Foundation (CDF)</label>
            </value>
            <value>
                <fullName>a0941000002wBz7AAE</fullName>
                <label>Cord (Central Office Re-Architected As A Datacenter)</label>
            </value>
            <value>
                <fullName>a0941000002wBz8AAE</fullName>
                <label>Core Embedded Linux Project (CELP)</label>
            </value>
            <value>
                <fullName>a0941000002wBzAAAU</fullName>
                <label>Core Infrastructure Initiative (CII)</label>
            </value>
            <value>
                <fullName>a0941000002wBzBAAU</fullName>
                <label>DiaMon Workgroup</label>
            </value>
            <value>
                <fullName>a092M00001G5794QAB</fullName>
                <label>Decentralized Identity Foundation (DIF)</label>
            </value>
            <value>
                <fullName>a0941000005osNmAAI</fullName>
                <label>Data Plane Development Kit (DPDK)</label>
            </value>
            <value>
                <fullName>a0941000002wBzCAAU</fullName>
                <label>Dronecode Project, Inc.</label>
            </value>
            <value>
                <fullName>a0941000005osNnAAI</fullName>
                <label>EdgeX Foundry</label>
            </value>
            <value>
                <fullName>a094100001ETJINAA5</fullName>
                <label>ELISA Fund</label>
            </value>
            <value>
                <fullName>a092M00001IkOVaQAN</fullName>
                <label>FD.io</label>
            </value>
            <value>
                <fullName>a0941000002wByXAAU</fullName>
                <label>Fossology</label>
            </value>
            <value>
                <fullName>a092M00001G4R8CQAV</fullName>
                <label>GraphQL Foundation</label>
            </value>
            <value>
                <fullName>a0941000002wByYAAU</fullName>
                <label>Hyperledger</label>
            </value>
            <value>
                <fullName>a0941000002wByeAAE</fullName>
                <label>Internet Security Research Group (ISRG)</label>
            </value>
            <value>
                <fullName>a0941000002wByaAAE</fullName>
                <label>Iotivity</label>
            </value>
            <value>
                <fullName>a0941000002wByZAAU</fullName>
                <label>IO Visor Project</label>
            </value>
            <value>
                <fullName>a0941000002wBybAAE</fullName>
                <label>JanusGraph</label>
            </value>
            <value>
                <fullName>a092M00001G56cjQAB</fullName>
                <label>Joint Development Foundation</label>
            </value>
            <value>
                <fullName>a0941000002wBycAAE</fullName>
                <label>JSFoundation</label>
            </value>
            <value>
                <fullName>a094100001ESu1rAAD</fullName>
                <label>kernelCI Initiative Fund</label>
            </value>
            <value>
                <fullName>a0941000002wBydAAE</fullName>
                <label>Kinetic Open Storage Project</label>
            </value>
            <value>
                <fullName>a094100000I8WueAAF</fullName>
                <label>LF Asia, LLC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>