force-app/main/default/objects/Account/fields/Signing_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Signing_Entity_Name__c</fullName>
    <inlineHelpText>This is the entity (company signing a particular agreement)</inlineHelpText>
    <label>Signing Entity Name</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>