force-app/main/default/objects/Account/fields/Sugar_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Account_ID__c</fullName>
    <description>Legacy ID from Sugar CRM kept for reference</description>
    <externalId>true</externalId>
    <label>Sugar_Account_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>