force-app/main/default/objects/Account/fields/Sugar_Account_TeamId__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Account_TeamId__c</fullName>
    <label>Sugar Account TeamId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>