force-app/main/default/objects/Account/fields/Sugar_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Annual_Revenue__c</fullName>
    <label>Sugar Annual Revenue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>