force-app/main/default/objects/Account/fields/Sugar_CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>Sugar_CreatedBy__c</fullName>
    <label>Sugar CreatedBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>