force-app/main/default/objects/Account/fields/Sugar_Modified_At__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Modified_At__c</fullName>
    <label>Sugar Modified At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>