force-app/main/default/objects/Account/fields/Sugar_Modify_UserId__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Modify_UserId__c</fullName>
    <label>Sugar Modify UserId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>