force-app/main/default/objects/Account/fields/Sugar_ModifyBy__c.field-meta.xml
<CustomField>
    <fullName>Sugar_ModifyBy__c</fullName>
    <label>Sugar ModifyBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>