force-app/main/default/objects/Account/fields/Sugar_Ownername__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Ownername__c</fullName>
    <label>Sugar Ownername</label>
    <length>255</length>
    <type>Text</type>
</CustomField>