force-app/main/default/objects/Account/fields/Sugar_ParentId__c.field-meta.xml
<CustomField>
    <fullName>Sugar_ParentId__c</fullName>
    <label>Sugar ParentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>