force-app/main/default/objects/Account/fields/Sugar_Person_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Person_Contact_Id__c</fullName>
    <externalId>true</externalId>
    <label>Sugar Person Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>