force-app/main/default/objects/Account/fields/Sugar_Username__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Username__c</fullName>
    <label>Sugar Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>