force-app/main/default/objects/Account/fields/Target_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Target_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used for demand base integration</description>
    <label>Target Accounts</label>
    <type>Checkbox</type>
</CustomField>