force-app/main/default/objects/Account/fields/Technologies__c.field-meta.xml
<CustomField>
    <fullName>Technologies__c</fullName>
    <description>used to sync technologies from clearbit</description>
    <inlineHelpText>Clearbit Integration</inlineHelpText>
    <label>Technologies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>