force-app/main/default/objects/Account/fields/Technology_Categories__c.field-meta.xml
<CustomField>
    <fullName>Technology_Categories__c</fullName>
    <description>used to sync technology categories from clearbit</description>
    <inlineHelpText>Clearbit Integration</inlineHelpText>
    <label>Technology Categories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>