force-app/main/default/objects/Account/fields/Training_MSA_File_ID__c.field-meta.xml
<CustomField>
    <fullName>Training_MSA_File_ID__c</fullName>
    <label>Training MSA File ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>