force-app/main/default/objects/Account/fields/Training_MSA_Link__c.field-meta.xml
<CustomField>
    <fullName>Training_MSA_Link__c</fullName>
    <formula>HYPERLINK(
          &quot;/lightning/r/ContentDocument/&quot; + Training_MSA_File_ID__c + &quot;/view&quot;,
          &quot;View Master Services Agreement&quot;,
          &quot;_self&quot;
         )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training MSA Link</label>
    <type>Text</type>
</CustomField>