force-app/main/default/objects/Account/fields/TypeDetail__c.field-meta.xml
<CustomField>
    <fullName>TypeDetail__c</fullName>
    <label>Type Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0. Open</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
                <label>1. Prospect</label>
            </value>
            <value>
                <fullName>Graveyard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>