force-app/main/default/objects/Account/recordTypes/Company_Account.recordType-meta.xml
<RecordType>
    <fullName>Company_Account</fullName>
    <active>true</active>
    <description>Account record type for companies</description>
    <label>Company Account</label>
</RecordType>