force-app/main/default/objects/Account/recordTypes/Project_Account.recordType-meta.xml
<RecordType>
    <fullName>Project_Account</fullName>
    <active>true</active>
    <description>Used for Projects that Need to function as Accounts</description>
    <label>Project Account</label>
</RecordType>