force-app/main/default/objects/Account/validationRules/Billing_Address_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Address_is_required</fullName>
    <active>false</active>
    <description>Billing address is required</description>
    <errorConditionFormula>AND(
  NOT(CONTAINS($Profile.Name, &apos;Admin&apos;)),
  OR(
      ISBLANK(BillingStreet),
      ISBLANK(BillingCity),
      ISBLANK(BillingState),
      ISBLANK(BillingCountry),
      ISBLANK(BillingPostalCode)
  )
)</errorConditionFormula>
    <errorMessage>Billing Address is required.</errorMessage>
</ValidationRule>