force-app/main/default/objects/Account/validationRules/Validate_Website.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Website</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(Website, &apos;//&apos;)</errorConditionFormula>
    <errorMessage>Please enter valid domain address.</errorMessage>
</ValidationRule>