force-app/main/default/objects/Account/listViews/Accnts_in_Korea.listView-meta.xml
<ListView>
    <fullName>Accnts_in_Korea</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.ADDRESS1_COUNTRY</field>
        <operation>contains</operation>
        <value>Korea</value>
    </filters>
    <label>Accnts in Korea</label>
</ListView>