force-app/main/default/objects/Account/listViews/Account_List.listView-meta.xml
<ListView>
    <fullName>Account_List</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>LF_Membership_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>equals</operation>
        <value>&quot;Tech Hardware, Storage &amp; Peripherals&quot;</value>
    </filters>
    <label>Account List</label>
</ListView>