force-app/main/default/objects/Account/listViews/Accounts_by_Current_Year_Spend.listView-meta.xml
<ListView>
    <fullName>Accounts_by_Current_Year_Spend</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Accounts by Current Year Spend</label>
</ListView>