force-app/main/default/objects/Account/listViews/Accounts_in_Boston.listView-meta.xml
<ListView>
    <fullName>Accounts_in_Boston</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.ADDRESS1_COUNTRY</field>
        <operation>contains</operation>
        <value>Brazil,Argentina,Mexico,Chile,Colombia</value>
    </filters>
    <label>Accnts in Brazil,Argent,Mex,Chile,Columb</label>
</ListView>