force-app/main/default/objects/Account/listViews/Accounts_in_Boston1.listView-meta.xml
<ListView>
    <fullName>Accounts_in_Boston1</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.ADDRESS1_CITY</field>
        <operation>equals</operation>
        <value>boston</value>
    </filters>
    <label>Accounts in Boston</label>
</ListView>