force-app/main/default/objects/Account/listViews/Accounts_in_Dubai.listView-meta.xml
<ListView>
    <fullName>Accounts_in_Dubai</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Additional_Email__pc</columns>
    <columns>Owner_Email__c</columns>
    <columns>PC_EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.ADDRESS1_COUNTRY</field>
        <operation>equals</operation>
        <value>UAE,United Arab Emerites,Saudi Arabia</value>
    </filters>
    <label>Accounts in Dubai</label>
</ListView>