force-app/main/default/objects/Account/listViews/Accounts_in_Raleigh.listView-meta.xml
<ListView>
    <fullName>Accounts_in_Raleigh</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>equals</operation>
        <value>Healthcare</value>
    </filters>
    <label>Accounts in Raleigh</label>
</ListView>