force-app/main/default/objects/Account/listViews/All_Account_List.listView-meta.xml
<ListView>
    <fullName>All_Account_List</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>LF_Membership_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Customer</value>
    </filters>
    <filters>
        <field>LF_Membership_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS1_COUNTRY</field>
        <operation>equals</operation>
        <value>Spain</value>
    </filters>
    <label>All Account List</label>
</ListView>