force-app/main/default/objects/Account/listViews/Corporate_Accounts.listView-meta.xml
<ListView>
    <fullName>Corporate_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>LF_Membership_Status__c</columns>
    <columns>LF_Membership_End_Date__c</columns>
    <columns>Project_Memberships__c</columns>
    <columns>ACCOUNT.SALES</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Company_Account</value>
    </filters>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Open,Customer</value>
    </filters>
    <filters>
        <field>Project_Memberships__c</field>
        <operation>equals</operation>
        <value>Cloud Native Computing Foundation</value>
    </filters>
    <label>Corporate Accounts-All</label>
</ListView>