force-app/main/default/objects/Account/listViews/Created_Last_90_Days.listView-meta.xml
<ListView>
    <fullName>Created_Last_90_Days</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>count_of_Account_Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_90_DAYS</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>hgoya,pserv</value>
    </filters>
    <label>Created Last 90 Days</label>
</ListView>