force-app/main/default/objects/Account/listViews/Fortune_500.listView-meta.xml
<ListView>
    <fullName>Fortune_500</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>ACCOUNT.SALES</columns>
    <columns>Global2000Rank__c</columns>
    <columns>ICP__c</columns>
    <columns>CrunchBase_URL__c</columns>
    <columns>Crunchbase_Handle__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Company_Account</value>
    </filters>
    <label>Fortune 500</label>
</ListView>