force-app/main/default/objects/Account/listViews/lf_fields.listView-meta.xml
<ListView>
    <fullName>lf_fields</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LF_Membership_End_Date__c</columns>
    <columns>LF_Membership_Only__c</columns>
    <columns>LF_Membership_Start_Date__c</columns>
    <columns>LF_Membership_Status__c</columns>
    <columns>Project_Memberships__c</columns>
    <columns>Initial_LF_Membership_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Memberships__c</field>
        <operation>includes</operation>
        <value>a0941000002wBz9AAE</value>
    </filters>
    <label>lf fields</label>
    <sharedTo>
        <role>Developer</role>
    </sharedTo>
</ListView>