force-app/main/default/objects/Account/listViews/My_Person_Accounts.listView-meta.xml
<ListView>
    <fullName>My_Person_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_TITLE</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Status__pc</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>edx_user_id__pc</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.PersonAccount</value>
    </filters>
    <label>My Person Accounts</label>
</ListView>